--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,5 +1,4 @@
 # .github/workflows/blank.yml
-
 name: Test Jupyter Notebooks
 
 on:
@@ -7,30 +6,24 @@ on:
     paths:
       - 'scripts/**/*.ipynb'
       - 'requirements.txt'
-      - 'environment.yml'
   pull_request:
-    paths:
-      - 'scripts/**/*.ipynb'
-      - 'requirements.txt'
-      - 'environment.yml'
 
 jobs:
-  notebook-test:
+  test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
 
-      - name: Setup Python
-        uses: actions/setup-python@v5
+      - uses: actions/setup-python@v5
         with:
           python-version: '3.11'
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
+          pip install nbmake pytest jupyter
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-          pip install nbmake pytest
 
-      - name: Run notebook tests with nbmake
+      - name: Test notebook
         run: |
-          pytest --nbmake --nbmake-timeout=600 scripts/
+          pytest --nbmake --nbmake-timeout=900 "scripts/Workbook1.ipynb"
