New branch 2025-12-07 Changes to be committed: 	modified:   .github/workflows/deploy-book.yml 	modified:   .github/workflows/notebook-ci.yml 	modified:   README.md 	renamed:    logs/2025-12-04_sess1_electronics_tests.md -> logs/2025-12-04.md

--- a/.github/workflows/notebook-ci.yml
+++ b/.github/workflows/notebook-ci.yml
@@ -1,6 +1,6 @@
 # .github/workflows/notebook-ci.yml
 #tests listed .ipynb s runs without errors
-name: Test Jupyter Notebooks
+name: Run JN
 
 on:
   push:
